# study

./: README.md
1sem/task2/: 1_1.cpp  2_1.cpp  5_1.cpp
1sem/task3/4/: Huffman.h
1sem/task4/: 1.cpp  4_1.cpp
2sem/task1/3/: a.out
2sem/task1/4/: CMakeLists.txt  main.cpp
2sem/task1/5/: CMakeLists.txt  main.cpp
2sem/task1/6/: CMakeLists.txt
2sem/task2/1/: CMakeLists.txt  int_main  main.cpp
2sem/task2/3/: main.cpp  puzzle.in
2sem/task2/4/: input.txt  output.txt
2sem/task2/5/: main.cpp  puzzle.in  puzzle.out  working
2sem/task2/6/: floyd.in  main.cpp
2sem/task3/1/: CMakeLists.txt
2sem/task3/2/: log.txt
2sem/task3/3/: CMakeLists.txt  maxflow.in
2sem/task4/1/: main.cpp
2sem/task4/2/: CMakeLists.txt  main.cpp
2sem/task4/3/: main.cpp
algorithms_and_structures/other/: treeTests
algorithms_and_structures/structures/: AVL.cpp  HashTable.cpp  Heap.cpp  Queue.cpp  Treap.cpp
algotithms/: QuickSort  huffman.cpp  kStat.cpp
algotithms/Huffman/: Huffman.cpp  main.cpp
other/: Tim.cpp
structures/: AVL  BST  BST.cpp  Deque  Deque.cpp  HashTable  Heap  MaxHeap  MaxHeap.cpp  MinHeap  MinHeap.cpp  Queue  Stack  Stack.cpp  StackQueue  StackQueue.cpp  Treap
tasks/2sem/task1/1/: CMakeLists.txt
tasks/2sem/task1/1/include/: CArcGraph.h  CSetGraph.h  IGraph.h
tasks/2sem/task1/1/src/: CListgraph.cpp  CMatrixGraph.cpp  CSetGraph.cpp
tasks/2sem/task3/2/: CMakeLists.txt  dots.txt
tasks/2sem/task3/2/include/: MST.h  TSP_MST.h  checker.h  dots.h  graph.h
tasks/2sem/task3/2/src/: TSP_BF.cpp  TSP_MST.cpp  checker.cpp  dots.cpp  graph.cpp  main.cpp
(+69 files in other folders)
